Fixes and update
